# screen-scribe-agents

./: .env.example  README.md  pyproject.toml
app/: config.py  main.py
app/api/routes/: assignments.py  health.py  mentor.py  notes.py  quizzes.py
app/core/: errors.py  logging.py
app/crews/assignment_crew/: agents.yaml  crew.py  tasks.yaml
app/crews/assignment_crew/data/: evaluation_documents.yaml
app/crews/evaluator_crew/: agents.yaml  crew.py  tasks.yaml
app/crews/mentor_crew/: agents.yaml  crew.py  tasks.yaml
app/crews/notes_crew/: agents.yaml  crew.py  tasks.yaml
app/crews/notes_crew/data/: reading_materials.yaml
app/crews/quiz_crew/: agents.yaml  crew.py  tasks.yaml
app/crews/quiz_crew/data/: reading_materials.yaml
app/services/: document_store.py  file_fetch.py  jobs.py
docs/: REQUIRED_FILES.md
docs/n8n-exports/: Assignment generator.json  Mentor.api.json  Quiz.json  Script analyser.json  assignment evaluator.json
scripts/: build_curriculum_excerpts.py  check_curriculum_bucket.py  clone_curriculum_aliases.py
tests/: test_document_store.py  test_health.py  test_lookups.py  test_mentor_session.py  test_reading_materials.py  test_routes_auth.py
